Android client:
- Facebook web-login for Facebook enabled TeamTalk servers
- Toggle subscriptions in User Information activity
- URLs in text messages are now clickable
- Added Indonesian language thanks to Muhammad Gagah
- OPUS audio codec updated to v1.2.1
- WebM (VPX) video codec updated to v1.6.1
iOS client:
- Facebook web-login for Facebook enabled TeamTalk servers
- OPUS audio codec updated to v1.2.1
Server:
- Facebook user authentication
- Ban users from channel
- Ban option for username and/or IP-address
- Fixed brute force login prevention using ban feature
- Limit number of issued commands by clients
- TeamTalk server for Windows no longer supports Windows XP
- TeamTalk server for Mac requires minimum macOS 10.9 (Mavericks)
- TeamTalk server for Debian Linux updated to Debian GNU/Linux 9 (stretch)
- TeamTalk server Raspberry Pi updated to Raspbian GNU/Linux 9 (stretch)

Version 5.2.4, released 2017/11/08
iOS client:
- Updated UI to iOS 11
- Corrected accessibility hint for TX button
Android client:
- Stay connected after screen dims
- Set voice activation level on main screen
- Toggle between voice activation and microphone gain
- Disable voice communication during phone call
- Status bar notification for initiated connection
- Ask before deleting server entry

Version 5.2.3, released 2017/06/01
Default Qt client:
- Fixed crash issue when receiving multiple voice streams
Accessible Windows client:
- Fixed crash issue when receiving multiple voice streams
- Two new sound events for transmit start/suspended
iOS client:
- Fixed crash issue when receiving multiple voice streams
Android client:
- Fixed crash issue when receiving multiple voice streams

Version 5.2.2, released 2017/05/08
Server:
- Exclusive voice/media file access in "Allow only one user to talk"/"No Interruptions" channel
Default Qt client:
- Virtual sound device for no input/output sound device
Accessible Windows client:
- Queue system when channel type is "Allow only one user to talk"